compiler/tools/fpp-check/test/component/struct_default_error.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/component/struct_default_error.fpp: 5.13
    default { x = 0, e = E.X, a = [ 1, 2, 3 ], b = 5 }
            ^
error: cannot convert { x: Integer, e: enum E, a: [3] Integer, b: Integer } to struct S
